syntax = "proto3";

package NUgc.NSchema.NCollections;

import "kernel/ugc/proto/collections/sources.proto";

message TSize {
    uint64 Width = 1;
    uint64 Height = 2;
}

// TODO: document.
message TEmbeddedPicture {
    string AvatarsKey = 1;
    int64 GroupId = 2;
    map<string, TSize> Sizes = 3;
    map<string, string> AvatarsMeta = 4;
    string DerivedFrom = 5;
}

// TODO: document, refactor more.
message TContent {
    string Id = 1;
    string SourceMd5 = 2;
    string SourceType = 3;
    TEmbeddedPicture Content = 4;

    oneof Source {
        TImageSource ImageSource = 100;
        TLinkSource LinkSource = 101;
    }
}
